--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 
 <!DOCTYPE html>
 <http>
@@ -19,8 +19,7 @@
                 <div class="card ">
                     <div class="card-body">
                         <h5 class="card-title">Viimeisin lämpötila</h5>
-                        <h6> Lämpötila: {{temps.temp}}</h6>
-                        <h6>Aika : {{temps.time}}</h6>
+                        <h6> Lämmöt:  Aika : </h6>
                     </div>
                 </div>
             </div>
@@ -28,7 +27,7 @@
                 <div class="card mx-auto">
                     <div class="card-body">
                         <h5 class="card-title">Viimeisin x tuntia</h5>
-                        <iframe width="600" height="400" src="{%url 'line_chart'%}"></iframe>
+                        <iframe width="600" height="400" src="/chart"></iframe>
 
                     </div>
                 </div>
